fix(scribe-image-processor): fixes deprecated constructor